loop throw divs

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web Scrapper",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "puppeteer": "^5.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
