--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "dependencies": {
     "axios": "^0.21.0",
     "chalk": "^4.1.0",
+    "image-convert": "^0.1.33",
     "puppeteer": "^5.5.0",
+    "uuid": "^8.3.2",
     "xlsx": "^0.16.9"
   },
   "devDependencies": {
